--- a/online-market-model/Cargo.toml
+++ b/online-market-model/Cargo.toml
@@ -10,3 +10,5 @@ chrono = { version = "0.4.31", features = ["serde"] }
 serde = { version = "1.0.190", features = ["derive"] }
 sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres", "chrono" ] }
 uuid = { version = "1.5.0", features = ["serde", "v4"] }
+utoipa = "4.0.0" 
+
