--- a/online-market-axum/Cargo.toml
+++ b/online-market-axum/Cargo.toml
@@ -18,3 +18,9 @@ chrono = { version = "0.4.31", features = ["serde"] }
 dotenv = "0.15.0"
 online-market-model = { path = "../online-market-model" }
 online-market-data = { path = "../online-market-data" }
+tracing = "0.1.40"
+tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
+tower = { version = "0.4.13" }
+tower-http = { version = "0.4.4", features = ["trace"] }
+utoipa = { version = "4.0.0", features = ["axum_extras", "chrono"] }
+utoipa-swagger-ui = { version = "4.0.0", features = ["axum"] }
