--- a/online-market-axum/Cargo.toml
+++ b/online-market-axum/Cargo.toml
@@ -6,8 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axum = {version = "0.6.20" }
+axum = {version = "0.6.20", features = ["ws"] }
 axum-macros = "0.3.8"
+axum-typed-websockets = "0.5.0"
 sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres", "chrono" ] }
 futures = "0.3.28"
 serde = { version = "1.0.189", features = ["derive"] }
